[package]
name = "nectar-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
## nectar
nectar-access-control.workspace = true
nectar-primitives.workspace = true

auto_impl.workspace = true
bytes.workspace = true
thiserror.workspace = true
